# MineSim-3DVisualTool

./: .gitignore  README-ZH.md  README.md
code_formatting_tool/gitignore-git忽略规则/: demo.gitignore  详细的 .gitignore 语法使用说明.md
launch/rviz/: phy_simulator_logging.rviz
src/minesim_visualizor_3d/core/common/: package.xml
src/minesim_visualizor_3d/core/common/inc/common/basics/: basics.h  colormap.h  config.h  macros.h  semantics.h  shapes.h  thread_pool.h  tic_toc.h  tool_func.h
src/minesim_visualizor_3d/core/common/inc/common/circle_arc/: circle_arc.h  circle_arc_branch.h
src/minesim_visualizor_3d/core/common/inc/common/idm/: intelligent_driver_model.h
src/minesim_visualizor_3d/core/common/inc/common/interface/: planner.h
src/minesim_visualizor_3d/core/common/inc/common/lane/: lane.h  lane_generator.h
src/minesim_visualizor_3d/core/common/inc/common/math/: calculations.h  poly_roots.h
src/minesim_visualizor_3d/core/common/inc/common/mobil/: mobil_behavior_prediction.h  mobil_model.h
src/minesim_visualizor_3d/core/common/inc/common/primitive/: frenet_primitive.h
src/minesim_visualizor_3d/core/common/inc/common/rss/: rss_checker.h
src/minesim_visualizor_3d/core/common/inc/common/solver/: ooqp_interface.h  qp_solver.h
src/minesim_visualizor_3d/core/common/inc/common/spline/: bezier.h  lookup_table.h  polynomial.h  spline.h  spline_generator.h
src/minesim_visualizor_3d/core/common/inc/common/state/: free_state.h  frenet_state.h  state.h  state_transformer.h  waypoint.h
src/minesim_visualizor_3d/core/common/inc/common/trajectory/: frenet_bezier_traj.h  frenet_primitive_traj.h  frenet_traj.h  trajectory.h
src/minesim_visualizor_3d/core/common/inc/common/visualization/: common_visualization_util.h
src/minesim_visualizor_3d/core/common/materials/vehicle_model/: mine_vehicles_configures.json
src/minesim_visualizor_3d/core/common/src/common/basics/: colormap.cc  semantics.cc  shapes.cc  tool_func.cc
src/minesim_visualizor_3d/core/common/src/common/circle_arc/: circle_arc.cc  circle_arc_branch.cc
src/minesim_visualizor_3d/core/common/src/common/idm/: intelligent_driver_model.cc
src/minesim_visualizor_3d/core/common/src/common/lane/: lane.cc  lane_generator.cc
src/minesim_visualizor_3d/core/common/src/common/math/: calculations.cc
src/minesim_visualizor_3d/core/common/src/common/mobil/: mobil_behavior_prediction.cc  mobil_model.cc
src/minesim_visualizor_3d/core/common/src/common/primitive/: frenet_primitive.cc
src/minesim_visualizor_3d/core/common/src/common/rss/: rss_checker.cc
src/minesim_visualizor_3d/core/common/src/common/solver/: ooqp_interface.cc  qp_solver.cc
src/minesim_visualizor_3d/core/common/src/common/spline/: lookup_table.cc  spline_generator.cc
src/minesim_visualizor_3d/core/minesim_log_vis/: CMakeLists.txt  package.xml
src/minesim_visualizor_3d/core/minesim_log_vis/include/gps/: geodetic_conv.hpp
src/minesim_visualizor_3d/core/minesim_log_vis/launch/: minesim_agents_log.launch  minesim_agents_log.md
src/minesim_visualizor_3d/core/minesim_log_vis/src/: gps2sim.cpp  gps2sim.md  动态配置 EGO 车辆模型的尺寸.md
src/minesim_visualizor_3d/core/phy_simulator/: CMakeLists.txt
src/minesim_visualizor_3d/core/phy_simulator/inc/phy_simulator/: arena_loader.h  basics.h  phy_simulator.h  ros_adapter.h  visualizer.h
src/minesim_visualizor_3d/core/phy_simulator/launch/: joy_ctrl.launch  phy_simulator_planning.launch
src/minesim_visualizor_3d/core/phy_simulator/src/: phy_simulator_planning_node.cc
src/minesim_visualizor_3d/core/phy_simulator/src/phy_simulator/: arena_loader.cc  phy_simulator.cc  ros_adapter.cc  visualizer.cc
src/minesim_visualizor_3d/core/playgrounds/configuration/: config.json
src/minesim_visualizor_3d/core/playgrounds/highway_lite(EPSILON_files_backup)/: note.md
src/minesim_visualizor_3d/core/playgrounds/minesim_high_definition_map/: vehicle_set.json
src/minesim_visualizor_3d/core/playgrounds/minesim_run_log/: jiangtong_intersection_9_3_2_2024-09-27T00:38:47.260912.idm.json  jiangtong_intersection_9_3_2_single_msg_2024-09-27T00:38:47.260912.idm.json
src/minesim_visualizor_3d/core/semantic_map_manager/: CMakeLists.txt
src/minesim_visualizor_3d/core/semantic_map_manager/inc/semantic_map_manager/: basics.h  config_loader.h  data_renderer.h  ros_adapter.h  semantic_map_manager.h  traffic_signal_manager.h  visualizer.h
src/minesim_visualizor_3d/core/semantic_map_manager/src/: config_loader.cc  data_renderer.cc  ros_adapter.cc  semantic_map_manager.cc  traffic_signal_manager.cc  visualizer.cc
src/minesim_visualizor_3d/core/vehicle_model/inc/vehicle_model/: ctx_idm_model.h  ideal_steer_model.h  idm_model.h  vehicle_model.h
src/minesim_visualizor_3d/core/vehicle_model/src/vehicle_model/: ctx_idm_model.cc  ideal_steer_model.cc  idm_model.cc  vehicle_model.cc
src/minesim_visualizor_3d/core/vehicle_msgs/inc/vehicle_msgs/: decoder.h  encoder.h
src/minesim_visualizor_3d/other/scripts/: parse_obj_3d_model copy.md  parse_obj_3d_model.py
(+10 files in other folders)
